--- a/src/style/MovieGallery.css
+++ b/src/style/MovieGallery.css
@@ -141,6 +141,9 @@ dialog .galleryBody {
   border-top: 3px solid rgba(255, 255, 255, 0.21);
   border-bottom: 3px solid rgba(255, 255, 255, 0.21);
   backdrop-filter: blur(4px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .galleryNavButton.right {
@@ -183,6 +186,17 @@ dialog .galleryBody {
     );
   left: 0;
   border-right: 3px solid rgba(255, 255, 255, 0.21);
+}
+
+.greyRoundButton {
+  width: 92px;
+  height: 92px;
+  background: linear-gradient(180deg, #5c6d82 0%, #3a485a 100%);
+  border-radius: 100%;
+  border: 4px solid #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 dialog .galleryHeader {
