--- a/src/style/MovieGallery.css
+++ b/src/style/MovieGallery.css
@@ -124,7 +124,7 @@ dialog .galleryBody {
   display: flex;
   justify-content: center;
   flex-shrink: 1;
-  max-height: calc(100vh - 14rem);
+  max-height: calc(100vh - 16rem);
   height: 100%;
   max-width: 1440px;
   margin: 0 auto;
@@ -145,7 +145,7 @@ dialog .galleryBody {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  animation: 0.35s ease-in 0s navButtonsAppears forwards;
+  animation: 0.3s ease-in 0s navButtonsAppears forwards;
 }
 
 @keyframes navButtonsAppears {
@@ -154,7 +154,7 @@ dialog .galleryBody {
     opacity: 0;
   }
   to {
-    transform: translateY(-6rem);
+    transform: translateY(-50%);
     opacity: 1;
   }
 }
@@ -213,6 +213,19 @@ dialog .galleryBody {
   box-shadow: 0 16px 32px #00000099;
 }
 
+.greyRoundButton:hover {
+  background: linear-gradient(
+      180deg,
+      rgba(50, 7, 142, 0) 0%,
+      rgba(50, 7, 142, 0.4) 100%
+    ),
+    linear-gradient(
+      180deg,
+      rgba(15, 116, 206, 0.9) 29.86%,
+      rgba(18, 133, 236, 0.9) 68.12%
+    );
+}
+
 .greyRoundButton .leftArrow {
   transform: rotateZ(180deg) translateX(5px);
 }
@@ -223,7 +236,7 @@ dialog .galleryBody {
 
 dialog .galleryHeader {
   display: flex;
-  height: 6rem;
+  height: 8rem;
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
@@ -234,7 +247,26 @@ dialog .galleryHeader {
   font-size: 16px;
   font-family: "Lexend", sans-serif;
   font-weight: 300;
-  padding: 1rem 2rem;
+  padding: 0rem 2rem;
+  justify-content: space-between;
+}
+
+.miniaturesSlide {
+  display: flex;
+  column-gap: 1rem;
+  background-color: #00000044;
+  height: 8rem;
+  padding: 0 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.galleryHeader .miniaturesSlide .miniatures {
+  width: 148px;
+  height: 92px;
+  border: 1px solid #ffffffff;
+  object-fit: cover;
+  object-position: top;
 }
 
 dialog .galleryFooter {
