--- a/src/style/MovieGallery.css
+++ b/src/style/MovieGallery.css
@@ -124,7 +124,7 @@ dialog .galleryBody {
   display: flex;
   justify-content: center;
   flex-shrink: 1;
-  max-height: calc(100vh - 16rem);
+  max-height: calc(100vh - 18rem);
   height: 100%;
   max-width: 1440px;
   margin: 0 auto;
@@ -236,7 +236,7 @@ dialog .galleryBody {
 
 dialog .galleryHeader {
   display: flex;
-  height: 8rem;
+  height: 10rem;
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
@@ -255,18 +255,20 @@ dialog .galleryHeader {
   display: flex;
   column-gap: 1rem;
   background-color: #00000044;
-  height: 8rem;
-  padding: 0 2rem;
+  height: 10rem;
+  padding: 0 1.5rem;
   justify-content: center;
   align-items: center;
 }
 
-.galleryHeader .miniaturesSlide .miniatures {
+.galleryHeader .miniaturesSlide img {
   width: 148px;
   height: 92px;
   border: 1px solid #ffffffff;
   object-fit: cover;
   object-position: top;
+  overflow-clip-margin: unset;
+  cursor: pointer;
 }
 
 dialog .galleryFooter {
