--- a/src/style/MovieGallery.css
+++ b/src/style/MovieGallery.css
@@ -29,6 +29,7 @@
 
 .galleryContainer article:hover {
   border: 2px solid #1a98ffcc;
+  box-shadow: 0 0 32px #1a98ffbb;
 }
 
 .galleryContainer article:hover img {
@@ -297,6 +298,10 @@ dialog .galleryHeader {
   cursor: pointer;
 }
 
+.galleryHeader .miniaturesSlide img:hover {
+  box-shadow: 0 0 32px #1a98ffbb;
+}
+
 dialog .galleryFooter {
   display: flex;
   height: 10rem;
@@ -338,7 +343,7 @@ dialog:modal {
 }
 
 .galleryFooter .genresContainer li {
-  padding: 3px 14px 2px 14px;
+  padding: 3px 14px 2px 13px;
   border-radius: 32px;
   font-weight: 600;
   background-color: #00000099;
