--- a/src/style/MovieGallery.css
+++ b/src/style/MovieGallery.css
@@ -55,7 +55,7 @@
   border-top: 1px solid #ffffff22;
   font-size: 14px;
   color: #ffffffcc;
-  font-weight: 500;
+  font-weight: 400;
   font-family: "Lexend", sans-serif;
 }
 
@@ -281,11 +281,17 @@ dialog .galleryHeader {
 .miniaturesSlide {
   display: flex;
   column-gap: 1rem;
-  background-color: #00000044;
-  height: 9rem;
+  background-color: #00000050;
+  /*height: 9rem;*/
   padding: 0 1.5rem;
   justify-content: center;
   align-items: center;
+  border-left: 1px solid #233344;
+  border-right: 1px solid #233344;
+  /*border: 1px solid #233344;*/
+  height: 9rem;
+  margin: auto 0;
+  /*overflow: hidden;*/
 }
 
 .galleryHeader .miniaturesSlide img {
