user review side panel

--- a/src/style/usersReviewsList.css
+++ b/src/style/usersReviewsList.css
@@ -3,7 +3,14 @@ section.userReviewsList {
   flex-direction: column;
 }
 
-article.usersReview {
+article.reviewFullRowContainer {
+  display: flex;
+  flex: row;
+  column-gap: 2rem;
+  margin-top: 3rem;
+}
+
+div.usersReview {
   display: flex;
   flex-direction: row;
   background: radial-gradient(
@@ -20,15 +27,35 @@ article.usersReview {
   outline: 1px solid #ffffff25;
   border-radius: 12px;
   padding: 1.3rem 2rem 1.5rem 2rem;
-  flex: 1 1 30%;
+  flex: 1 1 70%;
   row-gap: 0.3rem;
   column-gap: 4rem;
-  margin-top: 1.5rem;
   flex-wrap: nowrap;
   overflow: hidden;
   font-family: "Lexend", sans-serif;
-  margin-top: 3rem;
-  width: 70%;
+  /*margin-top: 3rem;*/
+  max-width: 70%;
+}
+
+.reviewSidePanel {
+  display: flex;
+  flex-direction: row;
+  background: radial-gradient(
+      143.25% 127.27% at 81.62% 0%,
+      rgba(255, 255, 255, 0.06) 0%,
+      rgba(255, 255, 255, 0) 100%
+    ),
+    linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0.06) 0%,
+      rgba(255, 255, 255, 0.04) 100%
+    );
+  backdrop-filter: blur(8px);
+  outline: 1px solid #ffffff25;
+  border-radius: 12px;
+  width: 30%;
+  flex-shrink: 1;
+  padding: 1.3rem 2rem 1.5rem 2rem;
 }
 
 .usersReview .creatorPortrait {
@@ -43,25 +70,25 @@ article.usersReview {
   filter: saturate(0.85);
 }
 
-article .reviewBody {
+div .reviewBody {
   display: flex;
   flex-direction: column;
 }
 
-article.usersReview p {
+div.usersReview p {
   font-weight: 300;
   line-height: 160%;
   font-size: 16px;
 }
 
-article.usersReview h3 {
+div.usersReview h3 {
   color: #ffffffdd;
   font-family: "Lexend", sans-serif;
   font-size: 22px;
   margin-bottom: 0.6rem;
 }
 
-article.usersReview .reviewSubtitle {
+div.usersReview .reviewSubtitle {
   font-weight: 300;
   font-size: 14px;
   color: #84afdacc;
