--- a/src/style/EpisodeRow.css
+++ b/src/style/EpisodeRow.css
@@ -62,6 +62,7 @@
   border-radius: 12px;
   padding: 1.5rem;
   row-gap: 0.75rem;
+  overflow: hidden;
   /*box-shadow: 0 4px 8px #00000066;*/
 }
 
@@ -109,4 +110,13 @@
   outline: 1px solid #ffffff25;
   background: linear-gradient(180deg, #ffffff20, #ffffff10);
   column-gap: 12px;
+  transition: all 0.2s ease-in 0s;
+  transform: translateY(6rem);
+}
+
+.moviePage
+  .episodesList
+  .episodeInfosContainer
+  .episodesButtonsContainer.translateButtonsContainerToPlace {
+  transform: translateY(0);
 }
