--- a/src/style/VerticalMovieCardsSlideshow.css
+++ b/src/style/VerticalMovieCardsSlideshow.css
@@ -14,7 +14,8 @@
 
 .verticalCardsSlideshow .titleContainer img {
   height: 28px;
-  transform: translateY(2px);
+  transform: translateY(3px);
+  margin-right: 2px;
 }
 
 .verticalCardsSlideshow .titleContainer span {
