--- a/src/style/EpisodeRow.css
+++ b/src/style/EpisodeRow.css
@@ -112,6 +112,7 @@
   column-gap: 12px;
   transition: all 0.2s ease-in 0s;
   transform: translateY(6rem);
+  opacity: 0;
 }
 
 .moviePage
@@ -119,4 +120,5 @@
   .episodeInfosContainer
   .episodesButtonsContainer.translateButtonsContainerToPlace {
   transform: translateY(0);
+  opacity: 1;
 }
