--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -17,15 +17,16 @@ main {
   display: flex;
   margin-bottom: 4rem;
   max-height: 660px;
+  max-width: 1440px;
   overflow: hidden;
   display: flex;
+  box-shadow: 0 8px 16px #00000055, 0 32px 64px #00000066;
 }
 
 .bannersSection img.banner {
   width: 100%;
   max-width: 1440px;
   object-fit: cover;
-  box-shadow: 0 8px 16px #00000088, 0 32px 64px #00000066;
-  border: 1px solid rgba(48, 48, 48, 0.6);
   transition: all 0.75s ease-in-out 0s;
+  border: 1px solid rgba(48, 48, 48, 0.6);
 }
