home page : horiz movies slideshow title can now be customized

--- a/src/style/VerticalMovieCardsSlideshow.css
+++ b/src/style/VerticalMovieCardsSlideshow.css
@@ -15,7 +15,7 @@
 .verticalCardsSlideshow .titleContainer img {
   height: 28px;
   transform: translateY(3px);
-  margin-right: 2px;
+  /*margin-right: 2px;*/
 }
 
 .verticalCardsSlideshow .titleContainer span {
